# PlanetarySystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run.sh  test.json
glad/src/: glad.c
include/: Application.hpp  Camera.hpp  CelestialObject.hpp  CelestialObjectJSONReader.hpp  CelestialObjectProperties.hpp  GraphicsWrapper.hpp  ImguiLayer  ImguiLayer.hpp  JSONReader.hpp  Logger.hpp  Physics.hpp  Planet.hpp  PlanetJSONReader.hpp  PlanetProperties.hpp  SimulationFiles.hpp  SimulationWrapper.hpp  WindowManager.hpp
samples/: CorpSimulation.cpp  NBodyProblem.cpp  SolarSystem.cpp  TwoBodyProblem.cpp  imgui+glad+cube.cpp  imgui.cpp  imgui_sample.cpp  render3D.cpp  solsys.cpp  sphere.cpp  sphericalsolsys.cpp
simulations/: and_another_json.json  simple.json  simple_simulation.json  solar_system.json  three_body_problem.json  two_body_problem.json
src/: PlanetProperties.cpp
